# SpamBack

./: README.md  app.py  pyproject.toml  read_imessages.py  send_imessage.py  setup.py  watch_new_messages.py
src/spamback/: cli.py  sender.py  spam_filter.py  watcher.py
